feat: 기업·농가 조회
- 기업·농가 리스트
- 기업·농가 단건 조회

- endpoint
    - GET /api/v1/company/list
    - GET /api/v1/company/{companyId}
    - GET /api/v1/farm/list
    - GET /api/v1/farm/{farmId}

# 117

--- a/src/main/resources/static/awesome/css/main-custom.css
+++ b/src/main/resources/static/awesome/css/main-custom.css
@@ -5713,6 +5713,20 @@ blockquote .shape {
     font-family: 'Jost', sans-serif;
 }
 
+.verify-btn li {
+    display: inline-block;
+    margin-right: 8px;
+    height: 30px;
+    width: 30px;
+    line-height: 30px;
+    border: 1px solid #eee;
+    border-radius: 50%;
+    color: #fff;
+    background: #5830E0;
+    border-color: transparent;
+    text-align: center;
+}
+
 .my-items .single-item-list .action-btn li {
     display: inline-block;
     margin-right: 8px;
