--- a/src/main/resources/templates/company/company-list.html
+++ b/src/main/resources/templates/company/company-list.html
@@ -53,31 +53,14 @@
             <div class="col-lg-12 col-md-12 col-12">
                 <div class="main-content">
                     <div class="dashboard-block mt-0">
-                        <nav class="list-nav">
-                            <ul>
-                                <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                                    <button class="nav-link active" id="nav-grid-tab" data-bs-toggle="tab"
-                                            data-bs-target="#nav-grid" type="button" role="tab"
-                                            aria-controls="nav-grid" aria-selected="true">
-                                        <li class="active"><a href="javascript:void(0)">최신순</a></li>
-                                    </button>
-                                    <button class="nav-link" id="nav-list-tab"
-                                            data-bs-toggle="tab" data-bs-target="#nav-list" type="button"
-                                            role="tab" aria-controls="nav-list" aria-selected="false">
-                                        <li><a href="javascript:void(0)">인기순</a></li>
-                                        <!-- 최신순, 인기순 중에 선택되는 버튼을 active로 활성화-->
-                                        <!-- class="nav-link active", aria-selected="true", li class="active"-->
-                                    </button>
-                                </div>
-                            </ul>
-                        </nav>
+                        <nav class="list-nav"></nav>
                         <!-- Start Items Area -->
                         <div class="my-items">
                             <!-- Start List Title -->
                             <div class="item-list-title">
                                 <div class="row align-items-center">
                                     <div class="col-lg-1 col-md-1 col-12">
-                                        <p>#</p>
+                                        <p>No</p>
                                     </div>
                                     <div class="col-lg-4 col-md-4 col-12">
                                         <p>기업명</p>
@@ -96,59 +79,31 @@
                             <!-- End List Title -->
 
                             <!-- Start Single List -->
-                            <div class="single-item-list">
+                            <div class="single-item-list" th:each="c:${companyList}">
                                 <div class="row align-items-center">
                                     <div class="col-lg-1 col-md-1 col-12">
                                         <div class="item-image content">
-                                            <h3 class="title"><a href="javascript:void(0)">1</a></h3>
+                                            <h3 class="title">
+                                                <a th:href="@{/company/{id}(id = ${c.id})}" th:text="${c.id}"></a>
+                                            </h3>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-4 col-12">
                                         <div class="item-image content">
-                                            <h3 class="title"><a href="javascript:void(0)">데이터 바인딩으로</a></h3>
+                                            <h3 class="title">
+                                                <a th:href="@{/company/{id}(id = ${c.id})}" th:text="${c.companyName}"></a>
+                                            </h3>
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-md-3 col-12">
-                                        <p>Electronic</p>
+                                        <p th:text="${c.companyMajorItem}"></p>
                                     </div>
                                     <div class="col-lg-2 col-md-2 col-12">
-                                        <p>New</p>
+                                        <p th:text="${c.companyAddress}"></p>
                                     </div>
                                     <div class="col-lg-2 col-md-2 col-12 align-right">
-                                        <ul class="action-btn">
-                                            <li><a href="javascript:void(0)"><i
-                                                    class="lni lni-checkmark-circle"></i></a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- End Single List -->
-
-                            <!-- Start Single List -->
-                            <div class="single-item-list">
-                                <div class="row align-items-center">
-                                    <div class="col-lg-1 col-md-1 col-12">
-                                        <div class="item-image content">
-                                            <h3 class="title"><a href="javascript:void(0)">2</a></h3>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4 col-md-4 col-12">
-                                        <div class="item-image">
-                                            <div class="content">
-                                                <h3 class="title"><a href="javascript:void(0)">리스트 반복 출력</a></h3>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3 col-md-3 col-12">
-                                        <p>Car</p>
-                                    </div>
-                                    <div class="col-lg-2 col-md-2 col-12">
-                                        <p>Vehicle</p>
-                                    </div>
-                                    <div class="col-lg-2 col-md-2 col-12 align-right">
-                                        <ul class="action-btn">
-                                            <li><a href="javascript:void(0)"><i
-                                                    class="lni lni-checkmark-circle"></i></a></li>
+                                        <ul class="verify-btn">
+                                            <li><i class="lni lni-checkmark-circle"></i></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -156,17 +111,30 @@
                             <!-- End Single List -->
 
                             <!-- Pagination -->
-                            <div class="pagination left">
-                                <ul class="pagination-list">
-                                    <li><a href="javascript:void(0)">1</a></li>
-                                    <li class="active"><a href="javascript:void(0)">2</a></li>
-                                    <li><a href="javascript:void(0)">3</a></li>
-                                    <li><a href="javascript:void(0)">4</a></li>
-                                    <li><a href="javascript:void(0)"><i class="lni lni-chevron-right"></i></a></li>
+                            <div class="pagination center" th:if="${!companyList.isEmpty()}">
+                                <ul class="pagination-list" th:with="start=${(companyList.number/maxPage)*maxPage + 1},
+                                end=(${(companyList.totalPages == 0) ? 1 : (start + (maxPage - 1) < companyList.totalPages
+                                ? start + (maxPage - 1) : companyList.totalPages)})">
+                                    <li th:if="${start > 1}">
+                                        <a th:href="@{/company/list(page=0)}" th:text="'<<'"></a>
+                                    </li>
+                                    <li th:if="${start > 1}">
+                                        <a th:href="@{/company/list(page=${start - maxPage})}" th:text="'<'"></a>
+                                    </li>
+
+                                    <li th:each="page: ${#numbers.sequence(start, end)}">
+                                        <a th:text="${page}" th:href="@{/company/list(page=${page - 1})}"></a>
+                                    </li>
+
+                                    <li th:if="${end < companyList.totalPages}">
+                                        <a th:href="@{/company/list(page=${start + maxPage})}" th:text="'>'"></a>
+                                    </li>
+                                    <li th:if="${end < companyList.totalPages}">
+                                        <a th:href="@{/company/list(page=${companyList.totalPages - 1})}" th:text="'>>'"></a>
+                                    </li>
                                 </ul>
                             </div>
                             <!--/ End Pagination -->
-
                         </div>
                         <!-- End Items Area -->
                     </div>
