--- a/src/main/resources/templates/contract/auction-new-contract.html
+++ b/src/main/resources/templates/contract/auction-new-contract.html
@@ -120,7 +120,7 @@
             //문서 작성 성공
 
             $.ajax({
-                url: "/api/v1/contract/saveContractDB",
+                url: "/api/v1/view/contract/saveContractDB",
                 type: "post",
                 contentType: "application/json",
                 data: JSON.stringify({
@@ -129,7 +129,9 @@
                     sellerId: /*[[${data.farmerId}]]*/ null,
                     contractItem: /*[[${data.vegName}]]*/ null,
                     contractQuantity: /*[[${data.auctionQuantity}]]*/ null,
-                    finalPrice: /*[[${data.finalPrice}]]*/ null
+                    finalPrice: /*[[${data.finalPrice}]]*/ null,
+                    auctionPostId: /*[[${data.auctionPostId}]]*/ null,
+                    contractType: "auction"
                 }),
                 dataType: "json",
 
@@ -142,7 +144,7 @@
         }
 
         alert("계약서가 생성되었습니다. 가입시 입력하신 이메일로 계약서를 발송하였으니 서명 후 제출해주십시오.");
-        window.location = '/api/v1/contract/mail-success';
+        window.location = '/api/v1/view/contract/mail-success';
     };
 
     var error_callback = function (response) {
