--- a/src/main/resources/templates/contract/gather-new-contract.html
+++ b/src/main/resources/templates/contract/gather-new-contract.html
@@ -126,7 +126,7 @@
             //문서 작성 성공
 
             $.ajax({
-                url: "/api/v1/contract/saveContractDB",
+                url: "/api/v1/view/contract/saveContractDB",
                 type: "post",
                 contentType: "application/json",
                 data: JSON.stringify({
@@ -135,7 +135,9 @@
                     sellerId: /*[[${data.farmerId}]]*/ null,
                     contractItem: /*[[${data.vegName}]]*/ null,
                     contractQuantity: /*[[${data.applyQuantity}]]*/ null,
-                    finalPrice: /*[[${data.finalPrice}]]*/ null
+                    finalPrice: /*[[${data.finalPrice}]]*/ null,
+                    buyingPostId: /*[[${data.buyingPostId}]]*/ null,
+                    contractType: "buying"
                 }),
                 dataType: "json",
 
@@ -148,7 +150,7 @@
         }
 
         alert("계약서가 생성되었습니다. 가입시 입력하신 이메일로 계약서를 발송하였으니 서명 후 제출해주십시오.");
-        window.location = '/api/v1/contract/mail-success';
+        window.location = '/api/v1/view/contract/mail-success';
     };
 
     var error_callback = function (response) {
