--- a/src/main/resources/templates/contract/gather-new-contract.html
+++ b/src/main/resources/templates/contract/gather-new-contract.html
@@ -8,15 +8,59 @@
 
 </head>
 
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>모집 계약서 생성</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/awesome/images/favicon.svg}"/>
+    <!-- Place favicon.ico in the root directory -->
 
-<body>
+    <!-- Web Font -->
+    <link
+            th:href="@{https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap}"
+            rel="stylesheet">
+    <link th:href="@{https://fonts.googleapis.com/css2?family=Lato&display=swap}" rel="stylesheet">
+
+    <!-- ========================= CSS here ========================= -->
+    <link th:href ="@{/awesome/css/bootstrap.min.css}" rel="stylesheet" type="text/css">
+    <link th:href ="@{/awesome/css/LineIcons.2.0.css}" rel="stylesheet" type="text/css">
+    <link th:href ="@{/awesome/css/animate.css}" rel="stylesheet" type="text/css">
+    <link th:href ="@{/awesome/css/tiny-slider.css}" rel="stylesheet" type="text/css">
+    <link th:href ="@{/awesome/css/glightbox.min.css}" rel="stylesheet" type="text/css">
+    <link th:href ="@{/awesome/css/main-custom.css}" rel="stylesheet" type="text/css">
+
+<!--start header-->
+<div th:replace="fragments/header :: header" />
+<!--end header-->
+
+<!-- Start Breadcrumbs -->
+<div class="breadcrumbs">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-6 col-md-6 col-12">
+                <div class="breadcrumbs-content">
+                    <h1 class="page-title">모집 계약</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Breadcrumbs -->
 
 <!-- Start Dashboard Section -->
-<div class="container">
+<div class="container contract">
     <iframe id="eformsign_iframe" width="1440" height="1024"></iframe>
 </div>
 <!-- End Dashboard Section -->
 
+
+<!-- ========================= JS here ========================= -->
+<script type="text/javascript" th:src="@{/awesome/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/awesome/js/wow.min.js}"></script>
+<script type="text/javascript" th:src="@{/awesome/js/tiny-slider.js}"></script>
+<script type="text/javascript" th:src="@{/awesome/js/glightbox.min.js}"></script>
+<script type="text/javascript" th:src="@{/awesome/js/main.js}"></script>
 
 <!-- ========================= JS here ========================= -->
 <script th:inline="javascript">
@@ -161,5 +205,6 @@
     eformsign.open();
 </script>
 </body>
+
 
 </html>
