--- a/src/main/resources/templates/contract/mail-success.html
+++ b/src/main/resources/templates/contract/mail-success.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="zxx">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <meta charset="utf-8" />
@@ -7,44 +7,26 @@
   <title>Mail Success - ClassiGrids Classified Ads and Listing Website Template.</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
+  <link rel="shortcut icon" type="image/x-icon" th:href="@{/awesome/images/favicon.svg}"/>
   <!-- Place favicon.ico in the root directory -->
 
   <!-- Web Font -->
   <link
-    href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+          th:href="@{https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap}"
+          rel="stylesheet">
+  <link th:href="@{https://fonts.googleapis.com/css2?family=Lato&display=swap}" rel="stylesheet">
 
   <!-- ========================= CSS here ========================= -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="assets/css/LineIcons.2.0.css" />
-  <link rel="stylesheet" href="assets/css/animate.css" />
-  <link rel="stylesheet" href="assets/css/tiny-slider.css" />
-  <link rel="stylesheet" href="assets/css/glightbox.min.css" />
-  <link rel="stylesheet" href="assets/css/main.css" />
+  <link th:href ="@{/awesome/css/bootstrap.min.css}" rel="stylesheet" type="text/css">
+  <link th:href ="@{/awesome/css/LineIcons.2.0.css}" rel="stylesheet" type="text/css">
+  <link th:href ="@{/awesome/css/animate.css}" rel="stylesheet" type="text/css">
+  <link th:href ="@{/awesome/css/tiny-slider.css}" rel="stylesheet" type="text/css">
+  <link th:href ="@{/awesome/css/glightbox.min.css}" rel="stylesheet" type="text/css">
+  <link th:href ="@{/awesome/css/main-custom.css}" rel="stylesheet" type="text/css">
 
 </head>
 
 <body>
-  <!--[if lte IE 9]>
-        <p class="browserupgrade">
-          You are using an <strong>outdated</strong> browser. Please
-          <a href="https://browsehappy.com/">upgrade your browser</a> to improve
-          your experience and security.
-        </p>
-      <![endif]-->
-
-  <!-- Preloader -->
-  <div class="preloader">
-    <div class="preloader-inner">
-      <div class="preloader-icon">
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-  </div>
-  <!-- /End Preloader -->
 
   <!-- Start Error Area -->
   <div class="maill-success">
@@ -52,12 +34,8 @@
       <div class="d-table-cell">
         <div class="container">
           <div class="success-content">
-            <h1>Congratulations!</h1>
-            <h2>Your Mail Sent Successfully</h2>
-            <p>Thanks for contacting with us, We will get back to you asap.</p>
-            <div class="button">
-              <a href="index.html" class="btn">Go To Home</a>
-            </div>
+            <h1>계약서 생성 완료!</h1>
+            <h2>가입 시 입력하신 이메일로 계약서가 발송되었습니다. 확인 후 서명해 주세요.</h2>
           </div>
         </div>
       </div>
@@ -66,10 +44,11 @@
   <!-- End Error Area -->
 
   <!-- ========================= JS here ========================= -->
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/wow.min.js"></script>
-  <script src="assets/js/tiny-slider.js"></script>
-  <script src="assets/js/glightbox.min.js"></script>
+  <script type="text/javascript" th:src="@{/awesome/js/bootstrap.min.js}"></script>
+  <script type="text/javascript" th:src="@{/awesome/js/wow.min.js}"></script>
+  <script type="text/javascript" th:src="@{/awesome/js/tiny-slider.js}"></script>
+  <script type="text/javascript" th:src="@{/awesome/js/glightbox.min.js}"></script>
+
   <script>
     window.onload = function () {
       window.setTimeout(fadeout, 500);
