refactor: 관리자, 마이페이지 리팩토링
- 관리자 정산 요청 로직
- 마이페이지 쿼리 수정
- 예외처리 추가

#172

--- a/src/main/resources/templates/point/point-check-payment.html
+++ b/src/main/resources/templates/point/point-check-payment.html
@@ -61,15 +61,15 @@
                             <h2>참여 정보</h2>
                             <span>
                                 <span>OrderNumber:</span>
-                                <span id="orderId">POST-C-ORDER-2023-02-10-222be942-7462-44cf-9525-c5d9a87a840c</span>
+                                <span id="orderId">POST-C-ORDER-2023-02-12-07661e23-e4df-47b6-be86-3867a13fa7bc</span>
                             </span><br>
                             <span>
                                 <span>참여게시물 타이틀:</span>
-                                <span id="orderName">사과 1톤 모집합니다</span>
+                                <span id="orderName">샐러드 재료 파프리카 모집합니다.</span>
                             </span><br>
                             <span>
                                 <span>참여자:</span>
-                                <span id="customerName">한건주</span>
+                                <span id="customerName">이기업</span>
                             </span>
                         </div>
 
@@ -79,7 +79,7 @@
                             <span id="total-amount">0</span><br>
 
                             <span>부족한 포인트:</span>
-                            <span id="amount">15000</span>
+                            <span id="amount">2800000</span>
                         </div>
                     </div>
 
