--- a/src/main/resources/templates/vegetable/vegetable-index.html
+++ b/src/main/resources/templates/vegetable/vegetable-index.html
@@ -445,8 +445,8 @@
 
             // 커스텀 오버레이에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
             var content = '<div class="customoverlay">' +
-                '  <a href="" target="_blank">' +
                 '  <a href="api/v1/farm/' + position.id + '" target="_blank">' +
+                '    <span class="title">' + position.name + '</span>' +
                 '  </a>' +
                 '</div>';
 
