refactor: payment css 링크 연결
- 링크 연결

--- a/src/main/resources/templates/point/point-check-payment.html
+++ b/src/main/resources/templates/point/point-check-payment.html
@@ -24,6 +24,7 @@
     <link th:href="@{/awesome/css/tiny-slider.css}" rel="stylesheet" type="text/css">
     <link th:href="@{/awesome/css/glightbox.min.css}" rel="stylesheet" type="text/css">
     <link th:href="@{/awesome/css/main.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/main-custom.css}" rel="stylesheet" type="text/css">
     <link th:href="@{/awesome/css/apply-bidding-detail.css}" rel="stylesheet" type="text/css">
 
     <script src="https://js.tosspayments.com/v1/payment"></script>
